--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,8 +1,4 @@
-FROM rocker/tidyverse
-
-RUN R -e "install.packages('plumber')"
-
+FROM trestletech/plumber
 COPY [".", "./"]
-
 ENTRYPOINT ["R", "-e", "pr <- plumber::plumb(commandArgs()[4]); pr$run(host='0.0.0.0', port=as.numeric(Sys.getenv('PORT')), swagger = T)"]
 CMD ["Plumber.R"]
