--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -14,4 +14,4 @@ WORKDIR /data
 # plumb and run server
 EXPOSE 8000
 ENTRYPOINT ["R", "-e", \
-    "pr <- plumber::plumb('/data/bos_rf_score.R'); pr$run(host='0.0.0.0', port=8000)"]
+    "pr <- plumber::plumb('/data/bos_rf_score.R'); pr$run(host='0.0.0.0', port=as.numeric(Sys.getenv('PORT')))"]
