--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -7,6 +7,8 @@ RUN install2.r plumber  # Add more packages separated by spaces.
 COPY [".", "./"]
 
 #### This starts your R-powered service.
-ENTRYPOINT ["Rscript", "-e", "pr <- plumber::plumb(commandArgs()[9]); pr$run(host='0.0.0.0', port=as.numeric(Sys.getenv('PORT')), swagger = F)"]
+EXPOSE 8080
+ENTRYPOINT ["R", "-e", \
+    "pr <- plumber::plumb('/test/plumber.R'); pr$run(host='0.0.0.0', port=8080)"]
 
 CMD ["plumber.R"]
