--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,16 +1,8 @@
-FROM rocker/r-ver:3.5.2
-
-RUN	apt-get update -qq && \
-	apt-get install -y \
-	pandoc \
-	libssl-dev \
-	libcurl4-gnutls-dev \
-	libxml2-dev
-
-RUN R -e "install.packages(c('plumber', 'dplyr', 'plotly'))"
-
-COPY plumber.R plumber.R
-
-EXPOSE 8000
-
-ENTRYPOINT ["R", "-e", "library(plumber); plumb('plumber.R')$run(port=8000, host='0.0.0.0')"]
+FROM rocker/tidyverse
+#### Install CRAN or Github packages not in rocker/tidyverse.
+RUN install2.r plumber  # Add more packages separated by spaces.
+#### Copies the files in this directory to files in your container.
+COPY [".", "./"]
+#### This starts your R-powered service.
+ENTRYPOINT ["Rscript", "-e", "pr <- plumber::plumb(commandArgs()[9]); pr$run(host='0.0.0.0', port=as.numeric(Sys.getenv('PORT')), swagger = F)"]
+CMD ["plumber.R"]
