--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,8 +1,4 @@
-FROM rocker/tidyverse
-#### Install CRAN or Github packages not in rocker/tidyverse.
-RUN install2.r plumber  # Add more packages separated by spaces.
-#### Copies the files in this directory to files in your container.
+FROM trestletech/plumber
 COPY [".", "./"]
-#### This starts your R-powered service.
-ENTRYPOINT ["Rscript", "-e", "pr <- plumber::plumb(commandArgs()[9]); pr$run(host='0.0.0.0', port=as.numeric(Sys.getenv('PORT')), swagger = F)"]
+ENTRYPOINT ["R", "-e", "pr <- plumber::plumb(commandArgs()[4]); pr$run(host='0.0.0.0', port=as.numeric(Sys.getenv('PORT')), swagger = T)"]
 CMD ["plumber.R"]
