--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -4,5 +4,7 @@ RUN install2.r plumber  # Add more packages separated by spaces.
 #### Copies the files in this directory to files in your container.
 COPY [".", "./"]
 #### This starts your R-powered service.
-ENTRYPOINT ["Rscript", "-e", "pr <- plumber::plumb(commandArgs()[9]); pr$run(host='0.0.0.0', port=as.numeric(Sys.getenv('PORT')), swagger = F)"]
+EXPOSE 8000
+ENTRYPOINT ["R", "-e", \
+    "pr <- plumber::plumb('/test/plumber.R'); pr$run(host='0.0.0.0', port=8000)"]
 CMD ["plumber.R"]
