--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,10 +1,14 @@
 FROM rocker/tidyverse
-#### Install CRAN or Github packages not in rocker/tidyverse.
+
+#### Install CRAN or Github packages not included in rocker/tidyverse container.
 RUN install2.r plumber  # Add more packages separated by spaces.
+
+# RUN installGithub.r # Uncomment to add Github packages.
+
 #### Copies the files in this directory to files in your container.
 COPY [".", "./"]
+
 #### This starts your R-powered service.
-EXPOSE 8000
-ENTRYPOINT ["R", "-e", \
-    "pr <- plumber::plumb('/test/plumber.R'); pr$run(host='0.0.0.0', port=8000)"]
-CMD ["plumber.R"]
+ENTRYPOINT ["Rscript", "-e", "pr <- plumber::plumb(commandArgs()[9]); pr$run(host='0.0.0.0', port=as.numeric(Sys.getenv('PORT')), swagger = F)"]
+
+CMD ["Plumber.R"]
