--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -11,4 +11,4 @@ COPY [".", "./"]
 #### This starts your R-powered service.
 ENTRYPOINT ["Rscript", "-e", "pr <- plumber::plumb(commandArgs()[9]); pr$run(host='0.0.0.0', port=as.numeric(Sys.getenv('PORT')), swagger = F)"]
 
-CMD ["Plumber.R"]
+CMD ["plumber.R"]
